# chompy-egglog

./: .gitignore  .gitmodules  Cargo.toml  README.md  math.json  my_file.json  rules.txt  synth-rules-final.txt  synth-rules.txt
.github/workflows/: rust.yml
egglog/: chompy-template.egg
python/: query_gpt.py
racket/: infer-cond.rkt
src/: chomper.rs  condition.rs  cvec.rs  ite.rs  language.rs  lib.rs  main.rs  option.rs  rule.rs  runner.rs  utils.rs
src/halide/: halide.rs  mod.rs  out-c.txt  rules.txt
src/sort/: cvec.rs  mod.rs  option.rs  rule.rs
tests/: bv-variable.rs  bv4.rs  bv_variable.rs  egglog_math.rs  halide.rs  ite.rs  math.rs  mod.rs  new_math.rs
tests/egglog/: bv4.egg  halide.egg  math-buggy.egg  math-old.egg  math-predicates.egg  math.egg
tests/halide/: halide.rs  halide_to_sexpr.py  mod.rs  out-nc.txt  rules.txt
tests/math/: mod.rs
tests/sketches/: bv_variable.rs
tests/utils/: get_rewrites.py  mod.rs  out-c.txt  scrape_halide_rules.py
