[package]
name = "chompy"
version = "0.1.0"
edition = "2021"

[dependencies]
egglog = "0.3.0"
egraph-serialize = "0.2.0"
indexmap = "2.6.0"
lazy_static = "1.5.0"
ruler = { path = "./ruler" }
rand = "0.8.5"
log = "0.4.22"
# same version as ruler
z3 = {version = "0.10.0", features = ["static-link-z3"]}
itertools = "0.13.0"

serde = "1.0.214"
serde_json = "1.0.132"
